fix: prevent text wrap in `small` tags

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -331,10 +331,13 @@ main > .top-artists-container ul,
 
 small,
 .track-list-item .song-details > div > a {
-  width: fit-content;
-  max-width: 50%;
   font-size: 0.85em;
   color: var(--color-text-gray);
+}
+
+.track-list-item .song-details > div > a {
+  width: fit-content;
+  max-width: 50%;
 }
 
 .track-list-item .song-details > div > a:hover {
